minor edits to intro notebooks

--- a/pyei/intro_notebooks/Plotting_with_PyEI.ipynb
+++ b/pyei/intro_notebooks/Plotting_with_PyEI.ipynb
@@ -45,14 +45,14 @@
     "- Summary plots for distributions of **polity-wide** voter preferences\n",
     "    - `plot`\n",
     "    - `plot_kde` (2 by 2)\n",
-    "    - `plot_kdes` (r by c)\n",
+    "    - `plot_kdes` ($r$ by $c$)\n",
     "    - `plot_boxplot` (2 by 2)\n",
-    "    - `plot_boxplots` (r by c)\n",
+    "    - `plot_boxplots` ($r$ by $c$)\n",
     "    - `plot_intervals` (2 by 2)\n",
     "\n",
     "- Plots of polarization\n",
     "    - `plot_polarization_kde` (2 by 2)\n",
-    "    - `plot_polarization_kdes` (r by c)\n",
+    "    - `plot_polarization_kdes` ($r$ by $c$)\n",
     "\n",
     "For all approaches except Goodman's ER and the Bayesian Goodman's ER (which do not generate samples for each precinct)\n",
     "\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "instant-tracy",
    "metadata": {},
    "outputs": [],
@@ -120,12 +120,12 @@
     "# Tomography_plot\n",
     "\n",
     "For the 2 by 2 case. If \n",
-    "- $X^i$ is the fraction of voters in the demographic group of interest (in precinct i) (from `group_fraction`)\n",
-    "- $T^i$ is the fraction of votes for the candidate of group of interest (in precinct i) (from `votes_fraction`)\n",
-    "- $b_1^i$ is the fraction of voters in the demographic group of interest that vote for the candidate of interest (in precinct i)\n",
-    "- $b_2^i$ is the fraction of voters in the complement of the demographic group of interest that vote for the candidate of interest (in precinct i)\n",
+    "- $X^i$ is the fraction of voters in the demographic group of interest (in Precinct i) (from `group_fraction`)\n",
+    "- $T^i$ is the fraction of votes for the candidate of group of interest (in Precinct i) (from `votes_fraction`)\n",
+    "- $b_1^i$ is the fraction of voters in the demographic group of interest that vote for the candidate of interest (in Precinct i)\n",
+    "- $b_2^i$ is the fraction of voters in the complement of the demographic group of interest that vote for the candidate of interest (in Precinct i)\n",
     "    \n",
-    "then what is sometimes calls us the **accounting identity** tells us that:\n",
+    "then what is sometimes called the **accounting identity** tells us that:\n",
     "$$ T^i = b_1^i X^i + b_2^i (1-X^i)$$\n",
     "\n",
     "(that is, the total votes for a candidate come from summing their votes from each of the two groups).\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "optional-marketing",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "<AxesSubplot:xlabel='voter pref of e_asian for Hardy', ylabel='voter pref of non-e_asian for Hardy'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "hourly-mobile",
    "metadata": {},
    "outputs": [
@@ -186,9 +186,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '22999' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
-      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '25120' (I am process '23887')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/amariahbecker/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
+      "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [b_2, b_1, kappa_2, phi_2, kappa_1, phi_1]\n"
      ]
     },
@@ -209,8 +227,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='10000' class='' max='10000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [10000/10000 01:16<00:00 Sampling 4 chains, 47 divergences]\n",
+       "      <progress value='5000' class='' max='5000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [5000/5000 02:58<00:00 Sampling 2 chains, 2 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -225,10 +243,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 1_500 tune and 1_000 draw iterations (6_000 + 4_000 draws total) took 108 seconds.\n",
-      "There were 19 divergences after tuning. Increase `target_accept` or reparameterize.\n",
-      "There were 19 divergences after tuning. Increase `target_accept` or reparameterize.\n",
-      "There were 9 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "Sampling 2 chains for 1_500 tune and 1_000 draw iterations (3_000 + 2_000 draws total) took 194 seconds.\n",
+      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n",
       "The estimated number of effective samples is smaller than 200 for some parameters.\n"
      ]
     }
@@ -433,13 +449,13 @@
    "source": [
     "# Summary plots for distributions of polity-wide voter preferences\n",
     "\n",
-    "Availplot_intervalsable for fitted `TwoByTwoEI`, `RowByColumEI`, `GoodmansERBayes` objects\n",
+    "Available plotting methods for fitted `TwoByTwoEI`, `RowByColumEI`, `GoodmansERBayes` objects\n",
     "\n",
     "- `plot`\n",
     "- `plot_kde` (2 by 2)\n",
-    "- `plot_kdes` (r by c)\n",
+    "- `plot_kdes` ($r$ by $c$)\n",
     "- `plot_boxplot` (2 by 2)\n",
-    "- `plot_boxplots` (r by c)\n",
+    "- `plot_boxplots` ($r$ by $c$)\n",
     "- `plot_intervals` (2 by 2)"
    ]
   },
@@ -780,12 +796,12 @@
     "\n",
     "Available for fitted `TwoByTwoEI`, `RowByColumEI`, `GoodmansERBayes` objects.\n",
     "\n",
-    "These plots visualize the estimated difference in support for a candidate between two demographic groups. Thus, they give insight into the polarization of those two groups with respect to a particular candidate.\n",
+    "These plots visualize the estimated difference in the levels of support for a candidate between two demographic groups. Thus, they give insight into the polarization of those two groups with respect to a particular candidate.\n",
     "\n",
-    "We can specify either an threshold, and show the probability that the difference in support is at least as large as that threshold.\n",
+    "We can specify a threshold and show the probability that the difference in support is at least as large as that threshold.\n",
     "\n",
-    "Alternatively, we can specify a percentile, and show the associated credible interval of the difference in voter support.\n",
-    "For example, we might specify the percentile of 95, and be returned something like: **there is a 95% probability that the difference in support for the candidate is in [.34, .73].** The fact that interval is far from 0 (where 0 represents no difference in support for the candidate between the two groups), suggests that the two groups have very different levels of support for the candidate."
+    "Alternatively, we can specify a percentile, and show the associated credible interval of the difference in voter support levels.\n",
+    "For example, we might specify the percentile of 95, and be returned something like: **there is a 95% probability that the difference in support for the candidate is in [.34, .73].** The fact that the interval is far from 0 (where 0 represents no difference in support for the candidate between the two groups), suggests that the two groups have very different levels of support for the candidate."
    ]
   },
   {
@@ -954,7 +970,7 @@
     "\n",
     "Like `TwoByTwoEI`, `RowByColumEI` objects, `GoodmansER` and `GoodmansERBayes` objects have a plot function to show a summary plot; however, since Goodman models rest on a linear regresion, their summary plots visualize that regression, and so look different from the other summary plots.\n",
     "\n",
-    "Note that the y-coordinate of point of intersection of the line with $x=1$ gives the estimated support of the demographic group of interest for the candidate of interest. Note that the y-coordinate of point of intersection of the line with $x=0$ gives the estimated support of the complement of the demographic group of interest for the candidate of interest. "
+    "Note that the y-coordinate of the point of intersection of the line with $x=1$ gives the estimated support of the demographic group of interest for the candidate of interest. Note that the y-coordinate of the point of intersection of the line with $x=0$ gives the estimated support of the complement of the demographic group of interest for the candidate of interest. "
    ]
   },
   {
@@ -1430,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
