adding 2 sentences about MH vs. HMC

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -80,13 +80,39 @@
   publisher={PeerJ Inc.}
 }
 
-@Manual{eiCompare,    title = {eiCompare: Compares Ecological Inference, Goodman, Rows by ColumnsEstimates},    author = {Loren Collingwood and Ari Decter-Frain and Hikari Murayama and Pratik Sachdeva and Juandalyn Burke},    year = {2020},    note = {R package version 3.0.0},    url = {https://CRAN.R-project.org/package=eiCompare},  }
+@Manual{eiCompare,
+    title = {eiCompare: Compares Ecological Inference, Goodman, Rows by Columns
+Estimates},
+    author = {Loren Collingwood and Ari Decter-Frain and Hikari Murayama and Pratik Sachdeva and Juandalyn Burke},
+    year = {2020},
+    note = {R package version 3.0.0},
+    url = {https://CRAN.R-project.org/package=eiCompare},
+  }
 
-  @Manual{ei,    title = {ei: Ecological Inference},    author = {Gary King and Molly Roberts},    year = {2016},    note = {R package version 1.3-3},    url = {https://CRAN.R-project.org/package=ei},  }
+  @Manual{ei,
+    title = {ei: Ecological Inference},
+    author = {Gary King and Molly Roberts},
+    year = {2016},
+    note = {R package version 1.3-3},
+    url = {https://CRAN.R-project.org/package=ei},
+  }
   
-    @Manual{eiPack,    title = {eiPack: Ecological Inference and Higher-Dimension Data Management},    author = {Olivia Lau and Ryan T. Moore and Michael Kellermann},    year = {2020},    note = {R package version 0.2-1},    url = {https://CRAN.R-project.org/package=eiPack},  }
+    @Manual{eiPack,
+    title = {eiPack: Ecological Inference and Higher-Dimension Data Management},
+    author = {Olivia Lau and Ryan T. Moore and Michael Kellermann},
+    year = {2020},
+    note = {R package version 0.2-1},
+    url = {https://CRAN.R-project.org/package=eiPack},
+  }
     
-    @Manual{RxCEcolInf,    title = {RxCEcolInf: 'R x C Ecological Inference With Optional Incorporation ofSurvey Information'},    author = {D. James Greiner and Paul Baines and Kevin M. Quinn},    year = {2019},    note = {R package version 0.1-4},    url = {https://CRAN.R-project.org/package=RxCEcolInf},  }
+    @Manual{RxCEcolInf,
+    title = {RxCEcolInf: 'R x C Ecological Inference With Optional Incorporation of
+Survey Information'},
+    author = {D. James Greiner and Paul Baines and Kevin M. Quinn},
+    year = {2019},
+    note = {R package version 0.1-4},
+    url = {https://CRAN.R-project.org/package=RxCEcolInf},
+  }
     
     @article{hoffman2014no,
   title={The No-U-Turn sampler: adaptively setting path lengths in Hamiltonian Monte Carlo.},
@@ -96,6 +122,23 @@
   number={1},
   pages={1593--1623},
   year={2014}
+}
+
+@book{BDA3,
+  title={Bayesian data analysis},
+  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
+  year={2013},
+  publisher={CRC press}
+}
+
+@article{neal2011mcmc,
+  title={MCMC using Hamiltonian dynamics},
+  author={Neal, Radford M and others},
+  journal={Handbook of markov chain monte carlo},
+  volume={2},
+  number={11},
+  pages={2},
+  year={2011}
 }
     
     
