--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -133,7 +133,7 @@ Survey Information'},
 
 @article{neal2011mcmc,
   title={MCMC using Hamiltonian dynamics},
-  author={Neal, Radford M and others},
+  author={Neal, Radford},
   journal={Handbook of markov chain monte carlo},
   volume={2},
   number={11},
