testing for CoC reports and md-modified ei, some documentation additions

--- a/pyei/examples/santa_clara_demo_r_by_c.ipynb
+++ b/pyei/examples/santa_clara_demo_r_by_c.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING (theano.configdefaults): install mkl with `conda install mkl-service`: No module named 'mkl'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -34,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -109,8 +110,6 @@
      "text": [
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
-      "INFO (theano.gof.compilelock): Waiting for existing lock by process '48452' (I am process '47996')\n",
-      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/gabe/.theano/compiledir_Darwin-19.6.0-x86_64-i386-64bit-i386-3.7.10-64/lock_dir\n",
       "Multiprocess sampling (4 chains in 4 jobs)\n",
       "NUTS: [b, phi, kappa]\n"
      ]
@@ -133,7 +132,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='10000' class='' max='10000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [10000/10000 02:40<00:00 Sampling 4 chains, 24 divergences]\n",
+       "      100.00% [10000/10000 19:27<00:00 Sampling 4 chains, 9 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -148,9 +147,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 1_500 tune and 1_000 draw iterations (6_000 + 4_000 draws total) took 177 seconds.\n",
-      "There were 24 divergences after tuning. Increase `target_accept` or reparameterize.\n",
-      "The acceptance probability does not match the target. It is 0.962325418678368, but should be close to 0.99. Try to increase the number of tuning steps.\n",
+      "Sampling 4 chains for 1_500 tune and 1_000 draw iterations (6_000 + 4_000 draws total) took 1195 seconds.\n",
+      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "There were 7 divergences after tuning. Increase `target_accept` or reparameterize.\n",
       "The rhat statistic is larger than 1.2 for some parameters.\n",
       "The estimated number of effective samples is smaller than 200 for some parameters.\n"
      ]
@@ -1117,25 +1116,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "This function requires the python library graphviz, along with binaries. The easiest way to install all of this is by running\n\n\tconda install -c conda-forge python-graphviz",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m~/miniconda3/envs/pyei/lib/python3.7/site-packages/pymc3/model_graph.py\u001b[0m in \u001b[0;36mmake_graph\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    191\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m             \u001b[0;32mimport\u001b[0m \u001b[0mgraphviz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'graphviz'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-bafeb85673aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mei\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_to_graphviz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/envs/pyei/lib/python3.7/site-packages/pymc3/model_graph.py\u001b[0m in \u001b[0;36mmodel_to_graphviz\u001b[0;34m(model)\u001b[0m\n\u001b[1;32m    229\u001b[0m     \"\"\"\n\u001b[1;32m    230\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodelcontext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mModelGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/envs/pyei/lib/python3.7/site-packages/pymc3/model_graph.py\u001b[0m in \u001b[0;36mmake_graph\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    192\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mgraphviz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    193\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 194\u001b[0;31m             raise ImportError('This function requires the python library graphviz, along with binaries. '\n\u001b[0m\u001b[1;32m    195\u001b[0m                               \u001b[0;34m'The easiest way to install all of this is by running\\n\\n'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    196\u001b[0m                               '\\tconda install -c conda-forge python-graphviz')\n",
-      "\u001b[0;31mImportError\u001b[0m: This function requires the python library graphviz, along with binaries. The easiest way to install all of this is by running\n\n\tconda install -c conda-forge python-graphviz"
-     ]
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.40.1 (20161225.0304)\n",
+       " -->\n",
+       "<!-- Title: %3 Pages: 1 -->\n",
+       "<svg width=\"245pt\" height=\"454pt\"\n",
+       " viewBox=\"0.00 0.00 245.00 454.13\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 450.132)\">\n",
+       "<title>%3</title>\n",
+       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-450.132 241,-450.132 241,4 -4,4\"/>\n",
+       "<g id=\"clust1\" class=\"cluster\">\n",
+       "<title>cluster3</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M20,-329.4214C20,-329.4214 86,-329.4214 86,-329.4214 92,-329.4214 98,-335.4214 98,-341.4214 98,-341.4214 98,-426.132 98,-426.132 98,-432.132 92,-438.132 86,-438.132 86,-438.132 20,-438.132 20,-438.132 14,-438.132 8,-432.132 8,-426.132 8,-426.132 8,-341.4214 8,-341.4214 8,-335.4214 14,-329.4214 20,-329.4214\"/>\n",
+       "<text text-anchor=\"middle\" x=\"86.5\" y=\"-336.2214\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">3</text>\n",
+       "</g>\n",
+       "<g id=\"clust2\" class=\"cluster\">\n",
+       "<title>cluster3 x 3</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M118,-241.4214C118,-241.4214 202,-241.4214 202,-241.4214 208,-241.4214 214,-247.4214 214,-253.4214 214,-253.4214 214,-426.132 214,-426.132 214,-432.132 208,-438.132 202,-438.132 202,-438.132 118,-438.132 118,-438.132 112,-438.132 106,-432.132 106,-426.132 106,-426.132 106,-253.4214 106,-253.4214 106,-247.4214 112,-241.4214 118,-241.4214\"/>\n",
+       "<text text-anchor=\"middle\" x=\"192\" y=\"-248.2214\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">3 x 3</text>\n",
+       "</g>\n",
+       "<g id=\"clust3\" class=\"cluster\">\n",
+       "<title>cluster42 x 3 x 3</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M118,-124.7107C118,-124.7107 202,-124.7107 202,-124.7107 208,-124.7107 214,-130.7107 214,-136.7107 214,-136.7107 214,-221.4214 214,-221.4214 214,-227.4214 208,-233.4214 202,-233.4214 202,-233.4214 118,-233.4214 118,-233.4214 112,-233.4214 106,-227.4214 106,-221.4214 106,-221.4214 106,-136.7107 106,-136.7107 106,-130.7107 112,-124.7107 118,-124.7107\"/>\n",
+       "<text text-anchor=\"middle\" x=\"178\" y=\"-131.5107\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">42 x 3 x 3</text>\n",
+       "</g>\n",
+       "<g id=\"clust4\" class=\"cluster\">\n",
+       "<title>cluster42 x 3</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M103,-8C103,-8 217,-8 217,-8 223,-8 229,-14 229,-20 229,-20 229,-104.7107 229,-104.7107 229,-110.7107 223,-116.7107 217,-116.7107 217,-116.7107 103,-116.7107 103,-116.7107 97,-116.7107 91,-110.7107 91,-104.7107 91,-104.7107 91,-20 91,-20 91,-14 97,-8 103,-8\"/>\n",
+       "<text text-anchor=\"middle\" x=\"203.5\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">42 x 3</text>\n",
+       "</g>\n",
+       "<!-- kappa -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>kappa</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"53\" cy=\"-394.7767\" rx=\"36.7079\" ry=\"35.2113\"/>\n",
+       "<text text-anchor=\"middle\" x=\"53\" y=\"-404.5767\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">kappa</text>\n",
+       "<text text-anchor=\"middle\" x=\"53\" y=\"-390.5767\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">~</text>\n",
+       "<text text-anchor=\"middle\" x=\"53\" y=\"-376.5767\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">Pareto</text>\n",
+       "</g>\n",
+       "<!-- phi_kappa -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>phi_kappa</title>\n",
+       "<polygon fill=\"none\" stroke=\"#000000\" points=\"206.2004,-321.4214 113.7996,-321.4214 113.7996,-271.4214 206.2004,-271.4214 206.2004,-321.4214\"/>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-306.2214\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">phi_kappa</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-292.2214\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">~</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-278.2214\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">Deterministic</text>\n",
+       "</g>\n",
+       "<!-- kappa&#45;&gt;phi_kappa -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>kappa&#45;&gt;phi_kappa</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M71.9057,-364.3253C80.188,-352.5173 90.6159,-339.4539 102,-329.4214 103.1408,-328.416 104.317,-327.427 105.5222,-326.4553\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"107.8731,-329.0695 113.824,-320.3038 103.7056,-323.4452 107.8731,-329.0695\"/>\n",
+       "</g>\n",
+       "<!-- b -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>b</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"160\" cy=\"-190.066\" rx=\"46.497\" ry=\"35.2113\"/>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-199.866\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">b</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-185.866\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">~</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-171.866\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">Dirichlet</text>\n",
+       "</g>\n",
+       "<!-- phi_kappa&#45;&gt;b -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>phi_kappa&#45;&gt;b</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M160,-271.2166C160,-260.5628 160,-247.815 160,-235.6143\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"163.5001,-235.5524 160,-225.5524 156.5001,-235.5524 163.5001,-235.5524\"/>\n",
+       "</g>\n",
+       "<!-- phi -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>phi</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"160\" cy=\"-394.7767\" rx=\"46.497\" ry=\"35.2113\"/>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-404.5767\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">phi</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-390.5767\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">~</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-376.5767\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">Dirichlet</text>\n",
+       "</g>\n",
+       "<!-- phi&#45;&gt;phi_kappa -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>phi&#45;&gt;phi_kappa</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M160,-359.2682C160,-350.3301 160,-340.7376 160,-331.8056\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"163.5001,-331.7023 160,-321.7024 156.5001,-331.7024 163.5001,-331.7023\"/>\n",
+       "</g>\n",
+       "<!-- votes_count -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>votes_count</title>\n",
+       "<ellipse fill=\"#d3d3d3\" stroke=\"#000000\" cx=\"160\" cy=\"-73.3553\" rx=\"60.623\" ry=\"35.2113\"/>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-83.1553\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">votes_count</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-69.1553\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">~</text>\n",
+       "<text text-anchor=\"middle\" x=\"160\" y=\"-55.1553\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">Multinomial</text>\n",
+       "</g>\n",
+       "<!-- b&#45;&gt;votes_count -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>b&#45;&gt;votes_count</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M160,-154.4148C160,-143.2156 160,-130.6946 160,-118.9068\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"163.5001,-118.7882 160,-108.7882 156.5001,-118.7883 163.5001,-118.7882\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.dot.Digraph at 0x7f7fb0027910>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
