minor updates, making sure santa clara notebooks still run, more documentation for goodmans_er.py and r_by_c.py

--- a/pyei/intro_notebooks/PyEI_overview.ipynb
+++ b/pyei/intro_notebooks/PyEI_overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "responsible-editing",
+   "id": "electrical-indian",
    "metadata": {},
    "source": [
     "# PyEI Overview\n",
@@ -19,19 +19,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "exceptional-static",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "chronic-balance",
+   "id": "congressional-institution",
    "metadata": {},
    "source": [
     "# Contents:\n",
@@ -47,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "framed-softball",
+   "id": "moral-baker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-dairy",
+   "id": "diagnostic-encyclopedia",
    "metadata": {},
    "source": [
     "# Loading data to use\n",
@@ -88,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "proof-words",
+   "id": "dietary-crossing",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "satisfied-commodity",
+   "id": "renewable-industry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranging-porter",
+   "id": "satisfied-desire",
    "metadata": {},
    "source": [
     "# Fitting a model for EI\n",
@@ -364,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entire-pacific",
+   "id": "rising-aquatic",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alike-magic",
+   "id": "local-given",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "absolute-country",
+   "id": "potential-momentum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "posted-warehouse",
+   "id": "grave-family",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "included-pregnancy",
+   "id": "union-small",
    "metadata": {},
    "source": [
     "# Plotting overview\n",
@@ -554,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "silver-designer",
+   "id": "silver-adolescent",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "norwegian-brown",
+   "id": "surrounded-tunisia",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "hybrid-channels",
+   "id": "molecular-fever",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "sharing-analysis",
+   "id": "unlikely-colorado",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "associate-lebanon",
+   "id": "shaped-indicator",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupied-africa",
+   "id": "liked-frequency",
    "metadata": {},
    "source": [
     "# Reporting results overview\n",
@@ -733,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aquatic-visit",
+   "id": "legal-egypt",
    "metadata": {},
    "source": [
     "**Polity-wide posterior means and credible intervals of voter preferences:**"
@@ -742,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "moral-sponsorship",
+   "id": "olympic-knock",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "operating-environment",
+   "id": "existing-giant",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "patient-tunisia",
+   "id": "dutch-begin",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "engaged-scale",
+   "id": "constitutional-framework",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thick-hazard",
+   "id": "accepting-covering",
    "metadata": {},
    "source": [
     "**Precinct-level posterior means and credible intervals**:"
@@ -846,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "russian-toilet",
+   "id": "framed-change",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caring-principal",
+   "id": "brutal-prisoner",
    "metadata": {},
    "source": [
     "**Polarization and candidates of choice**"
@@ -877,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "polyphonic-puppy",
+   "id": "separated-official",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "architectural-manchester",
+   "id": "conscious-senior",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "rubber-suggestion",
+   "id": "appointed-delta",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "amber-glass",
+   "id": "affiliated-brass",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "synthetic-transmission",
+   "id": "harmful-hartford",
    "metadata": {
     "tags": []
    },
@@ -1015,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "metallic-scanning",
+   "id": "annoying-robinson",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "played-index",
+   "id": "choice-mozambique",
    "metadata": {},
    "source": [
     "# Accessing samples\n",
@@ -1068,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "living-divorce",
+   "id": "medical-soldier",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cleared-links",
+   "id": "efficient-vector",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applicable-investing",
+   "id": "official-decline",
    "metadata": {},
    "source": [
     "# Currently supported models - quick reference\n",
@@ -1137,8 +1126,8 @@
     "- TwoByTwoEI\n",
     "    * `king99`\n",
     "    * `king99_pareto_modification`\n",
-    "    * `wakefield_beta` (UNDER DEVELOPMENT)\n",
-    "    * `wakefield_normal`  (UNDER DEVELOPMENT)\n",
+    "    * `wakefield_beta` \n",
+    "    * `wakefield_normal`  (caution: sampling difficulties)\n",
     "    * `truncated_normal`\n",
     "    \n",
     "- RowByColumnEI\n",
@@ -1157,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "forward-proof",
+   "id": "sexual-reminder",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "minus-garlic",
+   "id": "prescription-google",
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
